--- a/style.scss
+++ b/style.scss
@@ -101,6 +101,23 @@ body{
     border-color: #000;
   }
 
+  .controls {
+    position: absolute;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+  }
+
+  .controls div {
+    padding: 10px 0;
+  }
+
+  .changeColors {
+    display: block;
+    width: 120px;
+    height: 30px;
+  }
+
 
 
   footer{
