--- a/style.scss
+++ b/style.scss
@@ -1,170 +1,100 @@
-$main-font: Helvetica, Arial, sans-serif;
+$pink : #db1a94;
+$grey : #9e9e9e;
+$darkgrey : #424242;
+$sans-serif: 'Roboto', Helvetica, Arial, sans-serif;
+$slab-serif: 'Roboto Slab', Helvetica, Arial, sans-serif;
 
 body{
-  font-family: $main-font;
+  font-family: $sans-serif;
+}
 
-  /* Disable default button styling */
-  input {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
+
+
+#content{
+  position: absolute;
+  left:75px;
+  top:50px;
+}
+
+#logo{
+  #brandmark{
+    width:35px;
   }
-
-  h5{
-    font-size: 1em;
-    font-weight: bold;
-  }
-
-  #hero{
-    width:100%;
-    text-align: center;
-    height:100vh;
-
-    #title-block{
-      width:100%;
-      padding-top:18%;
-
-      #title{
-        font-size: 6em;
-      }
-    }
-  }
-
-  #content{
-    margin:0 auto;
-    width:860px;
+  #logotype{
     position:relative;
-  }
-
-  #sub-title{
-    display:inline-block;
-    width: 320px;
-    font-size: 2em;
-  }
-
-  #description{
-    position:absolute;
-    top:0px;
-    right:0px;
+    top:-5px;
+    margin-left: 15px;
     display: inline-block;
-    width: 520px;
-    font-size: 1.2em;
-    line-height: 1.6em;
-    padding-bottom:15%;
+    font-size: 0.875em;
+    letter-spacing:  0.5em;
+    line-height: 1.75em;
+    color:$darkgrey;
+  }
+}
+
+#title-block{
+  .title-label{
+    color:$grey;
+    font-family: $slab-serif;
+    font-weight:400;
+    font-size: 0.75em;
+    letter-spacing:  0.25em;
+    display:inline-block;
   }
 
-  .column-5{
-    width:220px;
-  }
-
-  .info{
-    font-size: 1.5em;
-  }
-
-  .sub-info{
-    margin-top:20px;
-    font-size: 1em;
-    width:180px;
-    line-height: 1.5em;
-  }
-
-  #where{
-    position:absolute;
-    top:300px;
-    right:0;
-  }
-
-  #when{
-    position:absolute;
-    top:300px;
-    right:300px;
-  }
-
-  #canvas-block-block{
-    h3{
-      font-size: 2em;
-      font-weight: normal;
-    }
-
+  .line{
+    display:inline-block;
+    background-color:$pink;
+    height:1px;
+    width:200px;
     position:relative;
-    height:500px;
-    width:960px;
-    margin:600px auto 0 auto;
+    top: -0.3em;
   }
 
-  #canvas-block{
-    display: block;
-    width:960px;
-    position:absolute;
-    border-width: 1px;
-    border-style: solid;
-    border-color: #000;
+  h1{
+    width:500px;
+    font-size: 4em;
+    color:$darkgrey;
+    margin: 25px 0;
   }
 
-  .controls {
-    position: absolute;
-    z-index: 2;
-    width: 100%;
-    height: 100%;
+  .social-icon{
+    width:30px;
+    display:inline-block;
+    position:relative;
+    top:10px;
+    margin-right:10px;
   }
+}
 
-  .controls div {
-    padding: 10px 0;
+
+#info{
+  h4{
+    color: $darkgrey;
+    font-size: 0.875em;
   }
+  .details {
+    font-family: $slab-serif;
+    font-weight:400;
+    font-size: 0.75em;
+    line-height: 1.5em;
+    color: $grey;
 
-  .changeColors {
-    display: block;
-    width: 120px;
-    height: 30px;
-  }
-
-
-
-  footer{
-    margin-top: 200px;
-    height:200px;
-    background:#f1f1f1;
-    padding-top: 75px;
-
-    form{
-      width:960px;
-      margin:0 auto;
-
-      position:relative;
-
-      label{
-        display:block;
-        margin-bottom: 10px;
-      }
-
-      #subscribe{
-        font-size: 1em;
-        width:400px;
-        padding: 12px 20px;
-      }
-
-      #submit-button{
-        font-size: 1em;
-        width:100px;
-        padding: 12px;
-        border-width:1px;
-        background-color: #fff;
-      }
-
-      ul{
-        position:absolute;
-        right:0;
-        list-style: none;
-        display: inline-block;
-        width:300px;
-
-        li{
-          margin-right:20px;
-          display:inline-block;
-        }
-      }
+    #invite{
+      color:$pink;
     }
   }
+}
 
-
+#share{
+  width:12em;
+  text-align: center;
+  font-family: $slab-serif;
+  font-weight:400;
+  font-size: 0.875em;
+  color:$pink;
+  border-width: 1px;
+  border-style: solid;
+  padding:15px;
+  border-color: $pink;
 }
