--- a/style.scss
+++ b/style.scss
@@ -8,8 +8,6 @@ body{
   font-family: $sans-serif;
 }
 
-
-
 #content{
   position: absolute;
   left:75px;
@@ -17,12 +15,16 @@ body{
 }
 
 #logo{
+  position: absolute;
+  left:75px;
+  top:50px;
+
   #brandmark{
-    width:35px;
+    width:37px;
   }
   #logotype{
     position:relative;
-    top:-5px;
+    top:-6px;
     margin-left: 15px;
     display: inline-block;
     font-size: 0.875em;
@@ -33,11 +35,17 @@ body{
 }
 
 #title-block{
+  position: absolute;
+  top: 306px;
+  left:75px;
+  transform: translateY(-50%);
+
+
   .title-label{
     color:$grey;
     font-family: $slab-serif;
     font-weight:400;
-    font-size: 0.75em;
+    font-size: 0.875em;
     letter-spacing:  0.25em;
     display:inline-block;
   }
@@ -46,14 +54,23 @@ body{
     display:inline-block;
     background-color:$pink;
     height:1px;
-    width:200px;
     position:relative;
     top: -0.3em;
+    margin: 0 20px;
+  }
+
+  #top-line{
+    width:225px;
+  }
+
+  #bottom-line{
+    width:165px;
+    margin: 0 20px 0 10px;
   }
 
   h1{
     width:500px;
-    font-size: 4em;
+    font-size: 5em;
     color:$darkgrey;
     margin: 25px 0;
   }
@@ -69,24 +86,39 @@ body{
 
 
 #info{
+  position: absolute;
+  left:75px;
+  top:500px;
+  bottom
+  :auto;
+
   h4{
     color: $darkgrey;
     font-size: 0.875em;
   }
-  .details {
-    font-family: $slab-serif;
-    font-weight:400;
-    font-size: 0.75em;
-    line-height: 1.5em;
-    color: $grey;
+  .info-box{
+    display:inline-block;
+    width: 200px;
 
-    #invite{
-      color:$pink;
+    .details {
+      font-family: $slab-serif;
+      font-weight:400;
+      font-size: 0.75em;
+      line-height: 1.5em;
+      color: $grey;
+
+      #invite{
+        color:$pink;
+      }
     }
   }
 }
 
 #share{
+  position:absolute;
+  right:50px;
+  top:550px;
+  bottom:auto;
   width:12em;
   text-align: center;
   font-family: $slab-serif;
@@ -97,4 +129,31 @@ body{
   border-style: solid;
   padding:15px;
   border-color: $pink;
+}
+
+
+
+
+@media screen and (min-height: 750px) {
+
+  #title-block{
+    position: absolute;
+    top: 45%;
+    left:75px;
+    transform: translateY(-50%);
+  }
+
+  #info{
+    top:auto;
+    position: absolute;
+    left:75px;
+    bottom:75px;
+  }
+
+  #share{
+    right:50px;
+    bottom:75px;
+    top:auto;
+  }
+
 }
