--- a/style.scss
+++ b/style.scss
@@ -8,6 +8,62 @@ body{
   font-family: $sans-serif;
 }
 
+.loader{
+  background-color: #fff;
+  height:100%;
+  width:100%;
+  position: fixed;
+  top:0px;
+  left:0px;
+  z-index:100;
+  opacity:1;
+  -webkit-transition: all 1s; /* Safari */
+   transition: all 1s;
+}
+.loader-disappear{
+  opacity: 0;
+}
+
+.hatch{
+  position: absolute;
+  top: calc(50% + 125px);
+  left:50%;
+  transform: translate(-50%,-50%);
+  color:$grey;
+  font-family: $slab-serif;
+  font-weight:400;
+  opacity: 0;
+  -webkit-transition: opacity 0.5s; /* Safari */
+   transition: opacity 0.5s;
+}
+
+.hatch-appear{
+  opacity: 1;
+}
+
+.egg-still{
+  position: absolute;
+  top: 0%;
+  left:50%;
+  transform: translate(-50%,-100%);
+  opacity:1;
+  -webkit-transition: all 1s; /* Safari */
+   transition: all 1s;
+}
+
+.egg-drop{
+  top:50%;
+  transform: translate(-50%,-50%);
+}
+
+.egg-disappear{
+  opacity:0;
+}
+
+.egg-disappear{
+  opacity:0;
+}
+
 #content{
   position: absolute;
   left:75px;
@@ -94,7 +150,7 @@ body{
 
   h4{
     color: $darkgrey;
-    font-size: 0.875em;
+    font-size: 1em;
   }
   .info-box{
     display:inline-block;
@@ -103,7 +159,7 @@ body{
     .details {
       font-family: $slab-serif;
       font-weight:400;
-      font-size: 0.75em;
+      font-size: 0.875em;
       line-height: 1.5em;
       color: $grey;
 
