--- a/style.scss
+++ b/style.scss
@@ -20,6 +20,7 @@ body{
   -webkit-transition: all 1s; /* Safari */
    transition: all 1s;
 }
+
 .loader-disappear{
   opacity: 0;
 }
@@ -49,15 +50,19 @@ body{
   opacity:1;
   -webkit-transition: all 1s; /* Safari */
    transition: all 1s;
+
+
 }
 
 .egg-drop{
   top:50%;
   transform: translate(-50%,-50%);
+  cursor:pointer;
 }
 
 .egg-disappear{
   opacity:0;
+  cursor: auto;
 }
 
 .egg-disappear{
