--- a/style.scss
+++ b/style.scss
@@ -206,6 +206,17 @@ body{
     border-color: $pink;
   }
 
+  #dimmer{
+    z-index: 0;
+    opacity:0.7;
+    background:#fff;
+    position: absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+  }
+
   #gradient{
     z-index: 0;
     position: fixed;
@@ -222,6 +233,8 @@ body{
     background: linear-gradient(to right, rgba(255,255,255,1) 1%, rgba(255,255,255,1) 48%, rgba(255,255,255,0) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff', GradientType=1 );
   }
+
+
 
   #sketch{
     z-index: -100;
