--- a/Project-Gallery/css/style.scss
+++ b/Project-Gallery/css/style.scss
@@ -19,14 +19,19 @@ body {
     max-width: 960px;
 }
 
-.m-layout {
+// GALLERY ------------------- 
+#proj-container {
     column-count: 3;
     -webkit-column-count: 3;
     column-gap: 20px;
     -webkit-column-gap: 20px;
 }
 
-.ml-panel {
+img {
+    max-width: 100%;
+}
+
+.tile {
     break-inside: avoid;
     -webkit-column-break-inside: avoid;
     margin-bottom: 20px;
@@ -35,11 +40,6 @@ body {
     overflow: hidden;
     max-width: 100%;
     height: auto;
-    img {
-        max-width: 100%;
-        border-bottom: solid 1px #808080;
-        display: block;
-    }
     .overlay {
         opacity: 0;
         position: absolute;
@@ -55,17 +55,54 @@ body {
         -webkit-transition: all 0.4s ease-in-out 0s;
         -ms-transition: all 0.4s ease-in-out 0s;
         transition: all 0.4s ease-in-out 0s;
-
-        &:hover, &:active {
-          opacity: 1;
+        &:hover,
+        &:active {
+            opacity: 1;
         }
-
         .text {
-          position: absolute;
-          bottom: 0;
-          left: 0;
-          padding: 20px;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            padding: 20px;
         }
+    }
+}
+
+// MODAL -------------------
+//colors
+$black_85: rgba(0, 0, 0, 0.85);
+$alabaster: #fafafa;
+$color_bunker_approx: #121212;
+.proj-overlay {
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: $black_85;
+}
+
+.modal_wrapper {
+    display: none;
+    position: fixed;
+    width: 960px;
+    height: 90%;
+    top: 0;
+    left: 0;
+    padding: calc(5vh) calc(25vw);
+    pointer-events: none;
+}
+
+#modal {
+    background-color: $alabaster;
+    height: calc(90vh - 50px);
+    padding: 50px 50px 0 50px;
+    overflow: auto;
+    pointer-events: auto;
+
+    > div {
+      display:none;
     }
 }
 
