--- a/Project-Gallery/css/style.scss
+++ b/Project-Gallery/css/style.scss
@@ -31,6 +31,20 @@ img {
     max-width: 100%;
 }
 
+a {
+    color: $pink;
+    text-decoration: none;
+    font-family: $slab-serif;
+    -moz-transition: all 0.4s ease-in-out 0s;
+    -webkit-transition: all 0.4s ease-in-out 0s;
+    -ms-transition: all 0.4s ease-in-out 0s;
+    transition: all 0.4s ease-in-out 0s;
+    &:hover {
+        background-color: $pink;
+        color: white;
+    }
+}
+
 .tile {
     break-inside: avoid;
     -webkit-column-break-inside: avoid;
@@ -40,6 +54,20 @@ img {
     overflow: hidden;
     max-width: 100%;
     height: auto;
+    h1 {
+        font-size: 1.5em;
+        margin: 0 0 5px 0;
+        text-transform: capitalize;
+    }
+    p {
+        margin: 0 0 20px 0;
+    }
+    .tags {
+        color: $pink;
+        font-family: $slab-serif;
+        margin-bottom: 0;
+        text-transform: capitalize;
+    }
     .overlay {
         opacity: 0;
         position: absolute;
@@ -151,21 +179,8 @@ $color_bunker_approx: #121212;
         margin: 0 0 35px 0;
         line-height: 1.75;
     }
-    a {
-        color: $pink;
-        text-decoration: none;
-        font-family: $slab-serif;
-        -moz-transition: all 0.4s ease-in-out 0s;
-        -webkit-transition: all 0.4s ease-in-out 0s;
-        -ms-transition: all 0.4s ease-in-out 0s;
-        transition: all 0.4s ease-in-out 0s;
-        &:hover {
-            background-color: $pink;
-            color: white;
-        }
-    }
     img:last-of-type {
-      padding-bottom: 40px;
+        padding-bottom: 40px;
     }
 }
 
@@ -283,60 +298,73 @@ $color_bunker_approx: #121212;
 //     #social {
 //         display: block;
 //     }
-//     .social-icon {
-//         width: 30px;
-//         display: inline-block;
-//         position: relative;
-//         top: 10px;
-//         margin-right: 10px;
-//     }
+//   
 // }
-// #info {
-//     position: absolute;
-//     left: 50%;
-//     transform: translateX(-50%);
-//     top: 375px;
-//     width: 90%;
-//     max-width: 420px;
-//     bottom: auto;
-//     padding-bottom: 20px;
-//     h4 {
-//         color: $darkgrey;
-//         font-size: 1em;
-//     }
-//     .info-box {
-//         display: inline-block;
-//         width: 45%;
-//         vertical-align: top;
-//         .details {
-//             font-family: $slab-serif;
-//             font-weight: 400;
-//             font-size: 0.875em;
-//             line-height: 1.5em;
-//             color: $grey;
-//             #invite {
-//                 color: $pink;
-//             }
-//         }
-//     }
-// }
-// #share {
-//     display: none;
-//     position: absolute;
-//     right: 50px;
-//     top: 550px;
-//     bottom: auto;
-//     width: 12em;
-//     text-align: center;
-//     font-family: $slab-serif;
-//     font-weight: 400;
-//     font-size: 0.875em;
-//     color: $pink;
-//     border-width: 1px;
-//     border-style: solid;
-//     padding: 15px;
-//     border-color: $pink;
-// }
+#show-details:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+#logo {
+    float: left;
+    width: 60%;
+
+    img {
+      height: 500px;
+          padding: 70px 0 120px 0;
+    }
+    
+}
+
+#social {
+    margin-top: 50px;
+    a {
+        background-color: transparent;
+    }
+}
+
+.social-icon {
+    width: 30px;
+    display: inline-block;
+    padding-right: 20px;
+}
+
+#info {
+    float: right;
+    width: 30%;
+    max-width: 420px;
+    bottom: auto;
+    padding-bottom: 20px;
+    transform: translateY(50%);
+    h4 {
+        color: $darkgrey;
+        font-size: 1em;
+        margin: 40px 0 5px 0;
+    }
+    .details {
+        font-family: $slab-serif;
+        font-weight: 400;
+        font-size: 0.875em;
+        line-height: 1.5em;
+        color: $darkgrey;
+    }
+}
+
+#share {
+    display: none;
+    width: 12em;
+    text-align: center;
+    font-family: $slab-serif;
+    font-weight: 400;
+    font-size: 0.875em;
+    color: $pink;
+    border-width: 1px;
+    border-style: solid;
+    padding: 15px;
+    border-color: $pink;
+}
+
 // #dimmer {
 //     z-index: 0;
 //     opacity: 0.7;
