--- a/Project-Gallery/css/style.scss
+++ b/Project-Gallery/css/style.scss
@@ -6,6 +6,16 @@ $slab-serif: "Roboto Slab",
 Helvetica,
 Arial,
 sans-serif;
+// media queries
+$mobile-width: 320px;
+$tablet-width: 768px;
+@mixin mobile {
+    @media (min-width: #{$mobile-width}) and (max-width: #{$tablet-width - 1px}) {
+        @content;
+    }
+}
+
+// core CSS
 html {
     font-size: 16px;
 }
@@ -25,6 +35,9 @@ body {
     -webkit-column-count: 3;
     column-gap: 10px;
     -webkit-column-gap: 20px;
+    @include mobile {
+        display: none;
+    }
 }
 
 img {
@@ -180,7 +193,7 @@ $color_bunker_approx: #121212;
         line-height: 1.75;
     }
     .other-imgs {
-      padding-bottom: 40px;
+        padding-bottom: 40px;
     }
 }
 
@@ -309,12 +322,18 @@ $color_bunker_approx: #121212;
 #logo {
     float: left;
     width: 60%;
-
-    img {
-      height: 500px;
-          padding: 70px 0 120px 0;
+    @include mobile {
+        float: none;
+        width: 80%;
+        margin: 0 auto 0 auto;
     }
-    
+    img {
+        max-height: 500px;
+        padding: 70px 0 120px 0;
+        @include mobile {
+            padding: 70px 0 50px 0;
+        }
+    }
 }
 
 #social {
@@ -322,12 +341,18 @@ $color_bunker_approx: #121212;
     a {
         background-color: transparent;
     }
+    @include mobile {
+        text-align: center;
+    }
 }
 
 .social-icon {
     width: 30px;
     display: inline-block;
     padding-right: 20px;
+    @include mobile {
+        width: 40px;
+    }
 }
 
 #info {
@@ -337,10 +362,23 @@ $color_bunker_approx: #121212;
     bottom: auto;
     padding-bottom: 20px;
     transform: translateY(50%);
+    @include mobile {
+        display: table;
+        margin: 0 auto;
+        float: none;
+        width: auto;
+        bottom: auto;
+        padding-bottom: 40px;
+        transform: none;
+    }
     h4 {
         color: $darkgrey;
         font-size: 1em;
         margin: 40px 0 5px 0;
+        font-family: $slab-serif;
+        @include mobile {
+            font-size: 1.2em;
+        }
     }
     .details {
         font-family: $slab-serif;
@@ -348,6 +386,10 @@ $color_bunker_approx: #121212;
         font-size: 0.875em;
         line-height: 1.5em;
         color: $darkgrey;
+        @include mobile {
+            font-size: 1.2em;
+            line-height: 1.6em;
+        }
     }
 }
 
