--- a/Project-Gallery/css/style.css
+++ b/Project-Gallery/css/style.css
@@ -54,10 +54,11 @@ a:hover {
   break-inside: avoid;
   -webkit-column-break-inside: avoid;
   margin-bottom: 20px;
+  width:100%;
+  max-width: 300px;
   box-sizing: border-box;
   position: relative;
   overflow: hidden;
-  max-width: 100%;
   height: auto;
 }
 /* line 70, style.scss */
@@ -86,7 +87,8 @@ a:hover {
   right: 0;
   bottom: 0;
   width: 100%;
-  height: 100%;
+  max-width: 300px;
+  height: calc(100% - 4px);
   background: rgba(0, 0, 0, 0.6);
   color: #fff;
   -moz-transition: all 0.4s ease-in-out 0s;
